--- a/.github/workflows/ci-contracts.yml
+++ b/.github/workflows/ci-contracts.yml
@@ -5,10 +5,14 @@ on:
     branches: [main]
     paths:
       - "contracts/**"
+      - "test_helpers/**"
+      - ".github/workflows/ci-contracts.yml"
   pull_request:
     branches: [main]
     paths:
       - "contracts/**"
+      - "test_helpers/**"
+      - ".github/workflows/ci-contracts.yml"
 
 defaults:
   run:
