--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ contracts/out
 contracts/db
 contracts/target
 contracts/manifest_dev.json
+contracts/manifest_dev-pop.json
 
 *.account.json
 *.keystore.json
