--- a/contracts/.vscode/tasks.json
+++ b/contracts/.vscode/tasks.json
@@ -4,7 +4,7 @@
     {
       "label": "Start Katana",
       "type": "shell",
-      "command": "katana --http.cors_origins '*' --db-dir db/katana",
+      "command": "katana --dev --dev.no-fee --http.cors_origins '*' --db-dir db/katana",
       "isBackground": true,
       "problemMatcher": [],
       "presentation": {
