--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Retrieve DOJO_VERSION
         run: |
           echo DOJO_VERSION=$(cat DOJO_VERSION) >> "$GITHUB_ENV"
-      - name: Set up Depot CLI
-        uses: depot/setup-action@v1
+#      - name: Set up Depot CLI
+#        uses: depot/setup-action@v1
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -47,7 +47,8 @@ jobs:
             type=semver,pattern={{version}}
             type=sha
 
-      - uses: depot/build-push-action@v1
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
         with:
           context: .
           build-args: |
