--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,4 +1,5 @@
 name: Docker Image CI
+
 on:
   push:
     tags:
@@ -23,8 +24,8 @@ jobs:
       - name: Retrieve DOJO_VERSION
         run: |
           echo DOJO_VERSION=$(cat DOJO_VERSION) >> "$GITHUB_ENV"
-#      - name: Set up Depot CLI
-#        uses: depot/setup-action@v1
+      - name: Set up Depot CLI
+        uses: depot/setup-action@v1
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -46,15 +47,14 @@ jobs:
             type=semver,pattern={{version}}
             type=sha
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
+      - uses: depot/build-push-action@v1
         with:
           context: .
           build-args: |
             GENERATE_POPULATED_CORE=true
             DOJO_VERSION=${{ env.DOJO_VERSION }}
           push: true
-#          FIXME: Currently arm64 is failing on node-gyp compilation
+          #          FIXME: Currently arm64 is failing on node-gyp compilation
           platforms: linux/amd64,linux/arm64
           secrets: |
             DOJO_KEYSTORE_PASSWORD=${{ secrets.DOJO_KEYSTORE_PASSWORD }}
