--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -13,7 +13,7 @@ dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.2.1" }
 starknet = "2.9.2"
 
 [dev-dependencies]
-pixelaw_test_helpers = { path = "../test_helpers" }
+cairo_test = "2.9.2"
 dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.2.1" }
 
 [tool.fmt]
@@ -25,6 +25,8 @@ sort-module-level-items = true
 sierra = true
 build-external-contracts = ["dojo::world::world_contract::world"]
 
+[features]
+default = []
 
 [profile.dev-pop]
 
