trying to fix ci

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -7,8 +7,10 @@ on:
 
 
 env:
+  CARGO_TERM_COLOR: always
   IMAGE_NAME: ${{ github.repository }}
   REGISTRY: ghcr.io
+  RUST_VERSION: 1.81.0
   DEPLOY_NAME: demo
 
 jobs:
