--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -53,7 +53,6 @@ jobs:
         with:
           context: .
           build-args: |
-            GENERATE_POPULATED_CORE=true
             DOJO_VERSION=${{ env.DOJO_VERSION }}
           push: true
           #          FIXME: Currently arm64 is failing on node-gyp compilation
@@ -73,10 +72,18 @@ jobs:
 
   populateImage:
     runs-on: ubuntu-24.04
-    needs: buildImage
+    permissions:
+      contents: write
+      packages: write
+      id-token: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Retrieve DOJO_VERSION
+        run: |
+          echo DOJO_VERSION=$(cat DOJO_VERSION) >> "$GITHUB_ENV"
+      - name: Set up Depot CLI
+        uses: depot/setup-action@v1
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -85,15 +92,28 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Pull the built image
-        run: |
-          docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.tags }}
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          # list of Docker images to use as base name for tags
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-populated
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=schedule
+            type=ref,event=pr
+            type=semver,pattern={{version}}
 
-      - name: Populate the Docker image
-        run: |
-          # Add your commands to modify the Docker image here
-          docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.tags }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:populateed
+      - uses: depot/build-push-action@v1
+        with:
+          context: .
+          file: "populate.Dockerfile"
+          push: true
+          #          FIXME: Currently arm64 is failing on node-gyp compilation
+          platforms: linux/amd64,linux/arm64
+          secrets: |
+            DOJO_KEYSTORE_PASSWORD=${{ secrets.DOJO_KEYSTORE_PASSWORD }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Push the populated image
-        run: |
-          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:populated
+
