--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -71,6 +71,7 @@ jobs:
           gh release create $VERSION -t $VERSION -n "Release notes for $VERSION"
 
   populateImage:
+    needs: buildImage
     runs-on: ubuntu-24.04
     permissions:
       contents: write
