move testing to a separate project again

--- a/contracts/manifest_sepolia.json
+++ b/contracts/manifest_sepolia.json
@@ -2026,7 +2026,7 @@
         {
           "type": "impl",
           "name": "Actions",
-          "interface_name": "pixelaw::apps::paint::app::IPaintActions"
+          "interface_name": "pixelaw::apps::paint::IPaintActions"
         },
         {
           "type": "enum",
@@ -2210,7 +2210,7 @@
         },
         {
           "type": "interface",
-          "name": "pixelaw::apps::paint::app::IPaintActions",
+          "name": "pixelaw::apps::paint::IPaintActions",
           "items": [
             {
               "type": "function",
@@ -2416,7 +2416,7 @@
         },
         {
           "type": "event",
-          "name": "pixelaw::apps::paint::app::paint_actions::Event",
+          "name": "pixelaw::apps::paint::paint_actions::Event",
           "kind": "enum",
           "variants": [
             {
@@ -2503,7 +2503,7 @@
         {
           "type": "impl",
           "name": "ActionsImpl",
-          "interface_name": "pixelaw::apps::snake::app::ISnakeActions"
+          "interface_name": "pixelaw::apps::snake::ISnakeActions"
         },
         {
           "type": "enum",
@@ -2601,7 +2601,7 @@
         },
         {
           "type": "interface",
-          "name": "pixelaw::apps::snake::app::ISnakeActions",
+          "name": "pixelaw::apps::snake::ISnakeActions",
           "items": [
             {
               "type": "function",
@@ -2743,7 +2743,7 @@
         },
         {
           "type": "event",
-          "name": "pixelaw::apps::snake::app::snake_actions::Event",
+          "name": "pixelaw::apps::snake::snake_actions::Event",
           "kind": "enum",
           "variants": [
             {
