--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -13,8 +13,9 @@ dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.3.0" }
 starknet = "2.9.2"
 
 [dev-dependencies]
-cairo_test = "2.9.2"
-dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.3.0" }
+#cairo_test = "2.9.2"
+#pixelaw_test_helpers = { path = "../test_helpers" }
+#dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.3.0" }
 
 [tool.fmt]
 sort-module-level-items = true
