--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -4,14 +4,16 @@ on:
   push:
     tags:
       - "v*.*.*"
-
+#    branches:
+#      - '**'
 
 env:
   CARGO_TERM_COLOR: always
   IMAGE_NAME: ${{ github.repository }}
   REGISTRY: ghcr.io
   RUST_VERSION: 1.81.0
-  DEPLOY_NAME: demo
+  DEPLOY_NAME: core
+
 
 jobs:
   buildImage:
@@ -26,8 +28,11 @@ jobs:
       - name: Retrieve DOJO_VERSION
         run: |
           echo DOJO_VERSION=$(cat DOJO_VERSION) >> "$GITHUB_ENV"
-      - name: Set up Depot CLI
-        uses: depot/setup-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          driver: docker-container
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -40,22 +45,20 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          # list of Docker images to use as base name for tags
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          # generate Docker tags based on the following events/attributes
           tags: |
             type=schedule
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=sha
 
-      - uses: depot/build-push-action@v1
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
         with:
           context: .
           build-args: |
             DOJO_VERSION=${{ env.DOJO_VERSION }}
           push: true
-          #          FIXME: Currently arm64 is failing on node-gyp compilation
           platforms: linux/amd64,linux/arm64
           secrets: |
             DOJO_KEYSTORE_PASSWORD=${{ secrets.DOJO_KEYSTORE_PASSWORD }}
@@ -83,8 +86,6 @@ jobs:
       - name: Retrieve DOJO_VERSION
         run: |
           echo DOJO_VERSION=$(cat DOJO_VERSION) >> "$GITHUB_ENV"
-      - name: Set up Depot CLI
-        uses: depot/setup-action@v1
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -92,29 +93,28 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          driver: docker-container
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
-          # list of Docker images to use as base name for tags
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-populated
-          # generate Docker tags based on the following events/attributes
           tags: |
             type=schedule
             type=ref,event=pr
             type=semver,pattern={{version}}
 
-      - uses: depot/build-push-action@v1
+      - name: Build and push populated Docker image
+        uses: docker/build-push-action@v5
         with:
           context: .
           file: "populate.Dockerfile"
           push: true
-          #          FIXME: Currently arm64 is failing on node-gyp compilation
           platforms: linux/amd64,linux/arm64
           secrets: |
             DOJO_KEYSTORE_PASSWORD=${{ secrets.DOJO_KEYSTORE_PASSWORD }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
-
