--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -4,8 +4,8 @@ on:
   push:
     tags:
       - "v*.*.*"
-#    branches:
-#      - '**'
+    branches:
+      - '**'
 
 env:
   CARGO_TERM_COLOR: always
@@ -23,17 +23,22 @@ jobs:
       packages: write
       id-token: write
     steps:
+      # Checkout
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      # DOJO VERSION
       - name: Retrieve DOJO_VERSION
         run: |
           echo DOJO_VERSION=$(cat DOJO_VERSION) >> "$GITHUB_ENV"
 
+      # SETUP BUILDX
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
           driver: docker-container
 
+      # LOGIN
       - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
@@ -41,6 +46,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      # METADATA
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
@@ -52,6 +58,14 @@ jobs:
             type=semver,pattern={{version}}
             type=sha
 
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -60,12 +74,17 @@ jobs:
             DOJO_VERSION=${{ env.DOJO_VERSION }}
           push: true
           platforms: linux/amd64,linux/arm64
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+#          platforms: linux/arm64
+
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
           secrets: |
             DOJO_KEYSTORE_PASSWORD=${{ secrets.DOJO_KEYSTORE_PASSWORD }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Move new cache
+        run: mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
       - name: Create GitHub Release
         env:
