trying to fix arm build

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -4,8 +4,8 @@ on:
   push:
     tags:
       - "v*.*.*"
-    branches:
-      - '**'
+#    branches:
+#      - '**'
 
 env:
   CARGO_TERM_COLOR: always
