--- a/.github/workflows/ci-contracts.yml
+++ b/.github/workflows/ci-contracts.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: software-mansion/setup-scarb@v1
         with:
-          scarb-version: "2.10.1"
+          scarb-version: "2.11.4"
       - run: |
           cd contracts && scarb fmt --check
   core-test:
@@ -36,10 +36,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: software-mansion/setup-scarb@v1
         with:
-          scarb-version: "2.10.1"
+          scarb-version: "2.11.4"
       - uses: asdf-vm/actions/setup@v3
       - run: |
           asdf plugin add dojo https://github.com/dojoengine/asdf-dojo
-          asdf install dojo 1.6.2
-          asdf global dojo 1.6.2
+          asdf install dojo 1.7.0-alpha.0
+          asdf global dojo 1.7.0-alpha.0
           cd pixelaw_testing && sozo test
