--- a/pixelaw_testing/Scarb.toml
+++ b/pixelaw_testing/Scarb.toml
@@ -1,5 +1,5 @@
 [package]
-cairo-version = "=2.10.1"
+cairo-version = "=2.11.4"
 name = "pixelaw_testing"
 version = "0.7.9"
 homepage = "https://github.com/pixelaw/core"
@@ -10,10 +10,10 @@ sierra-replace-ids = true
 
 [dependencies]
 pixelaw = { path = "../contracts" }
-dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.6.2" }
-dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.6.2" }
-starknet = "2.10.1"
-cairo_test = "=2.10.1"
+dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.7.0-alpha.0" }
+dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.7.0-alpha.0" }
+starknet = "2.11.4"
+cairo_test = "=2.11.4"
 
 
 [[target.starknet-contract]]
