--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -1,5 +1,5 @@
 [package]
-cairo-version = "2.11.4"
+cairo-version = "2.12.2"
 name = "pixelaw"
 version = "0.7.9"
 homepage = "https://github.com/pixelaw/core"
@@ -9,13 +9,16 @@ edition = "2024_07"
 sierra-replace-ids = true
 
 [dependencies]
-dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.7.0-alpha.0" }
-starknet = "2.11.4"
+dojo = "1.7.1"
+starknet = "2.12.2"
 
 [dev-dependencies]
-cairo_test = "2.11.4"
-pixelaw_test_helpers = { path = "../test_helpers" }
-dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.7.0-alpha.0" }
+cairo_test = "2.12.2"
+pixelaw_testing = { path = "../pixelaw_testing" }
+dojo_cairo_test = "1.7.1"
+
+[tool.scarb]
+allow-prebuilt-plugins = ["dojo_cairo_macros"]
 
 [tool.fmt]
 sort-module-level-items = true
