--- a/contracts/Scarb_deploy.toml
+++ b/contracts/Scarb_deploy.toml
@@ -1,5 +1,5 @@
 [package]
-cairo-version = "=2.11.4"
+cairo-version = "=2.12.2"
 name = "pixelaw"
 version = "0.7.9"
 homepage = "https://github.com/pixelaw/core"
@@ -9,11 +9,11 @@ edition = "2024_07"
 sierra-replace-ids = true
 
 [dependencies]
-dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.7.0-alpha.0" }
-starknet = "2.11.4"
+dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.7.0" }
+starknet = "2.12.2"
 
 [dev-dependencies]
-dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.7.0-alpha.0" }
+dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.7.0" }
 
 [tool.fmt]
 sort-module-level-items = true
