--- a/contracts/.vscode/settings.json
+++ b/contracts/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "cairo1.enableLanguageServer": true,
-  "cairo1.languageServerPath": "${userHome}/.asdf/installs/dojo/1.7.0-alpha.0/bin/dojo-language-server",
+  "cairo1.languageServerPath": "${userHome}/.asdf/installs/dojo/1.7.1/bin/dojo-language-server",
   "cairo1.enableScarb": true,
   "cairo1.scarbPath": "${userHome}/.asdf/installs/scarb/2.12.2/bin/scarb",
   "cairo1.preferScarbLanguageServer": false
