--- a/.github/workflows/ci-contracts.yml
+++ b/.github/workflows/ci-contracts.yml
@@ -42,4 +42,4 @@ jobs:
           asdf plugin add dojo https://github.com/dojoengine/asdf-dojo
           asdf install dojo 1.7.1
           asdf global dojo 1.7.1
-          cd pixelaw_testing && sozo test
+          cd contracts && sozo test
