--- a/contracts/Scarb_deploy.toml
+++ b/contracts/Scarb_deploy.toml
@@ -1,5 +1,5 @@
 [package]
-cairo-version = "=2.12.2"
+cairo-version = "2.12.2"
 name = "pixelaw"
 version = "0.7.9"
 homepage = "https://github.com/pixelaw/core"
@@ -9,19 +9,20 @@ edition = "2024_07"
 sierra-replace-ids = true
 
 [dependencies]
-dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.7.1" }
+dojo = "1.7.1"
 starknet = "2.12.2"
 
-[dev-dependencies]
-dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.7.1" }
+[tool.scarb]
+allow-prebuilt-plugins = ["dojo_cairo_macros"]
 
 [tool.fmt]
 sort-module-level-items = true
 
+[lib]
+
 [[target.starknet-contract]]
 sierra = true
 build-external-contracts = ["dojo::world::world_contract::world"]
-
 
 [profile.slot]
 
