--- a/.github/workflows/ci-contracts.yml
+++ b/.github/workflows/ci-contracts.yml
@@ -22,7 +22,7 @@ env:
 
 jobs:
   cairofmt:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24-04
     steps:
       - uses: actions/checkout@v3
       - uses: software-mansion/setup-scarb@v1
@@ -31,15 +31,19 @@ jobs:
       - run: |
           cd contracts && scarb fmt --check
   core-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v3
       - uses: software-mansion/setup-scarb@v1
         with:
           scarb-version: "2.12.2"
-      - uses: asdf-vm/actions/setup@v3
-      - run: |
-          asdf plugin add dojo https://github.com/dojoengine/asdf-dojo
-          asdf install dojo 1.7.1
-          asdf global dojo 1.7.1
-          cd contracts && sozo test
+      - uses: asdf-vm/actions/setup@v4
+      - name: Install Dojo toolchain
+        run: |
+          curl -L https://install.dojoengine.org | bash
+          asdf install
+      - name: Run tests
+        run: |
+          cd contracts
+          sozo build
+          sozo test
