fix wrong ubuntu version in tests

--- a/.github/workflows/ci-contracts.yml
+++ b/.github/workflows/ci-contracts.yml
@@ -22,7 +22,7 @@ env:
 
 jobs:
   cairofmt:
-    runs-on: ubuntu-24-04
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v3
       - uses: software-mansion/setup-scarb@v1
