--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -1,5 +1,5 @@
 [package]
-cairo-version = "2.12.2"
+cairo-version = "2.13.1"
 name = "pixelaw"
 version = "0.7.9"
 homepage = "https://github.com/pixelaw/core"
@@ -9,13 +9,13 @@ edition = "2024_07"
 sierra-replace-ids = true
 
 [dependencies]
-dojo = "1.7.1"
-starknet = "2.12.2"
+dojo = "=1.8.0"
+starknet = "=2.13.1"
 
 [dev-dependencies]
 pixelaw_test_utils = { path = "../pixelaw_test_utils" }
-cairo_test = "2.12.2"
-dojo_cairo_test = "1.7.1"
+cairo_test = "=2.13.1"
+dojo_cairo_test = "=1.8.0"
 
 [tool.scarb]
 allow-prebuilt-plugins = ["dojo_cairo_macros"]
